nohup.out
  File "bingBackGround.py", line 86
    except:
         ^
SyntaxError: invalid syntax
